<resources>
    <string name="app_name">CheckBoxGrupoB2</string>
    <string name="hint_nombre">Nombre:</string>
    <string name="hint_apellido">Apellido:</string>
    <string name="hint_celular">Celular:</string>
    <string name="hint_email">Email:</string>
    <string name="hint_codigo">Código Estudiante:</string>
    <string name="switch_estudiante">Es estudiante?</string>
    <string name="btn_registrar">Registrar</string>
    <string name="sw_opciones">Este es el listado de opciones</string>
</resources>